<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CountryDetails">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/countries">
            <ImageView
                android:id="@+id/flag_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:id="@+id/country_detail_flag"
                android:src="@drawable/akan"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:clickable="true"
                android:layout_marginTop="220dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|end"
                    android:src="@drawable/ic_info_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases_reported"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/total_cases_reported"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="120dp"
                    android:text="@string/cases"
                    android:textStyle="bold"
                    android:textColor="@color/colorRed"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_cases"
                    android:layout_marginTop="42dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/today_cases_reported"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorRed"
                    android:layout_marginTop="42dp"
                    android:layout_marginStart="120dp"
                    android:text="@string/cases"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reported_deaths_today"
                    android:layout_marginTop="72dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/reported_deaths_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="170dp"
                    android:textStyle="bold"
                    android:layout_marginTop="72dp"
                    android:text="@string/cases"
                    android:textColor="@color/colorRed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_deaths_reported"
                    android:layout_marginTop="105dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/total_deaths_reported"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    android:textStyle="bold"
                    android:textColor="@color/colorRed"
                    android:layout_marginTop="105dp"
                    android:layout_marginStart="170dp"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:clickable="true"
                android:layout_marginTop="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|end"
                    android:src="@drawable/ic_info_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_patients"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/total_recovered_patients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:text="@string/cases"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_patients"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/active_patients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="150dp"
                    android:text="@string/cases" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/critical_patients"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:id="@+id/critical_patients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textStyle="bold"
                    android:layout_marginStart="150dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/cases"/>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>